--- a/index.html
+++ b/index.html
@@ -10,21 +10,17 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
-        
-        <script src="js/jquery-3.2.1.slim.min.js"></script>
-        <script src="js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
     </head>
     <body>
         <section class="container">
             <header class="row">
-                <section class="col col-6 col-md-6 col-lg-6 logo">
+                <div class="col col-6 col-md-6 col-lg-6 logo">
                     <img alt="DDEV" src="img/logo.svg" class="logo-image" />
-                </section>
-                <section class="col col-6 col-md-6 col-lg-6 logo-detais">
+                </div>
+                <div class="col col-6 col-md-6 col-lg-6 logo-detais">
                     <h1 class="site-name">DANIEL ARRAIS</h1>
                     <h6 class="site-slogan">FRONT-END DEV</h6>
-                </section>
+                </div>
             </header>
         </section>
         <hr/>
@@ -34,7 +30,7 @@
             </figure>
             <section class="articles">
                 <h2 class="title-section">Trabalhos desenvolvidos</h2>
-                <section class="row">
+                <div class="row">
                     <article class="col col-12 col-md-6 col-lg-4">
                         <img class="img-article" src="img/systemum.svg" alt="Daniel Arrais">
                         <h2 class="article-title">Suporti</h2>
@@ -50,7 +46,7 @@
                         <h2 class="article-title">Bokeh</h2>
                         <a class="article-link" href="https://bit.ly/2CwfjuU">https://bit.ly/2CwfjuU</a>
                     </article>
-                </section>
+                </div>
             </section>
         </main>  
         <footer class="page-footer font-small blue">
